language/move-lang/tests/move_check/parser/hexstring_bad_value1.exp
error: 

   ┌── tests/move_check/parser/hexstring_bad_value1.move:3:11 ───
   │
 3 │         x"g"
   │           ^ Invalid hexadecimal character: 'g'
   │

