language/move-lang/tests/move_check/parser/hexstring_bad_value1.move
module M {
    public fun bad_value1(): vector<u8> {
        x"g"
    }
}
